do trobleshooting in style.scss

--- a/styles/homepage_styles/style.scss
+++ b/styles/homepage_styles/style.scss
@@ -648,7 +648,7 @@ nav {
     padding: 2rem;
     border-radius: 1rem;
     color: #fff;
-    background-image: url("../assets/images/input-image.jpg");
+    background-image: url("../../assets/workpage_images/input-image.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -729,7 +729,6 @@ nav {
     }
   }
 }
-
 // <<<<<<<<<----------- SERVICES - SECTION --------------->>>>>>>>>>>
 
 .services {
