--- a/styles/homepage_styles/style.css
+++ b/styles/homepage_styles/style.css
@@ -533,7 +533,7 @@ nav .nav-icon {
   padding: 2rem;
   border-radius: 1rem;
   color: #fff;
-  background-image: url("../assets/images/input-image.jpg");
+  background-image: url("../../assets/workpage_images/input-image.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
