--- a/styles/homepage_styles/style.css
+++ b/styles/homepage_styles/style.css
@@ -27,7 +27,7 @@ body {
 
 .container {
   width: 100%;
-  height: 100dvh;
+  height: 80vh;
   background-color: hsl(var(--secondary)/0.7);
   font-family: "manrope", sans-serif;
   overflow: hidden;
