--- a/styles/homepage_styles/style.scss
+++ b/styles/homepage_styles/style.scss
@@ -30,7 +30,7 @@ body {
 
 .container {
   width: 100%;
-  height: 100dvh;
+  height: 80vh;
   background-color: hsl(var(--secondary) / .7);
   font-family: "manrope", sans-serif;
   overflow: hidden;
