--- a/styles/homepage_styles/style.scss
+++ b/styles/homepage_styles/style.scss
@@ -44,9 +44,11 @@ body {
   }
 
   .center-text {
-    width: 100%;
+    width: 80%;
     position: absolute;
-    top: 10rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: var(--white-clr);
     text-align: center;
 
@@ -108,9 +110,9 @@ body {
   }
 
   @media (max-width: 900px) {
-    .center-text {
-      top: 10rem;
+    height: 100vh;
 
+    .center-text {
       h1 {
         font-size: 2.5rem;
       }
@@ -158,6 +160,7 @@ body {
   background-color: var(--primary-clr);
   color: var(--white-clr);
   width: 100%;
+  height: 20vh;
   padding-block: 2rem;
 
   display: flex;
@@ -170,7 +173,7 @@ body {
     align-items: center;
     gap: .5rem;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: "manrope", sans-serif;
   }
 
@@ -178,15 +181,16 @@ body {
     color: var(--primary-clr);
     background-color: var(--white-clr);
     border-radius: 9999px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding: 1rem 1.8rem;
     border: none;
   }
 
   @media(max-width: 900px) {
+    height: 30vh;
     flex-direction: column;
     gap: 1rem;
-    padding-inline: 2rem;
+    padding-inline: 4rem;
 
     span {
       text-wrap: balance;
@@ -217,11 +221,11 @@ body {
 // navbar
 
 nav {
-  width: 100%;
-  padding-inline: 2rem;
+  width: calc(100% - 160px);
   position: absolute;
-  top: 6px;
-  margin-top: 1rem;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -283,6 +287,7 @@ nav {
   }
 
   @media(max-width: 900px) {
+    width: 90%;
 
     img {
       width: 100px;
@@ -308,10 +313,11 @@ nav {
   background-color: black;
   outline: 1px solid var(--white-clr);
   color: var(--white-clr);
-  width: 20rem;
+  width: 50%;
   height: 100dvh;
   top: 0;
-  right: 0px;
+  right: 0;
+  transform: none;
 
   header {
     padding-block: 1rem;
@@ -362,6 +368,7 @@ nav {
 .roof-benefits-section {
   font-family: "manrope", sans-serif;
   background-color: var(--black-clr);
+  padding: 1rem 3rem 4rem 3rem;
 
   .heading {
     padding-block: 4rem;
@@ -379,11 +386,12 @@ nav {
 
     h1 {
       color: var(--white-clr);
-      font-size: 2.5rem;
+      font-size: 5ch;
     }
 
     p:nth-of-type(2) {
       color: var(--grey-text-clr);
+      font-size: 2.2ch;
     }
   }
 
@@ -399,7 +407,7 @@ nav {
     .card {
       background-color: var(--muted);
       border-radius: 10px;
-      padding: 1rem 2rem 1rem 1rem;
+      padding: 30px;
       transition: background .3s ease-in-out, box-shadow .3s ease-in-out;
 
       .head {
@@ -417,7 +425,9 @@ nav {
       }
 
       p {
-        font-size: .9rem;
+        font-size: 2ch;
+        font-weight: 400;
+        color: #E2DFD2;
       }
 
       &:hover {
@@ -504,6 +514,7 @@ nav {
         p {
           font-size: 1.2rem;
           font-weight: 100;
+          text-wrap: balance;
         }
       }
     }
@@ -518,9 +529,9 @@ nav {
 // <<<<<<<<<<<--------------- GETTING STARTED JORNEY SECTION ------------>>>>>>>>>>>
 
 .journey-section {
-  height: 90vh;
+  height: 65vh;
   font-family: "manrope", sans-serif;
-  padding: 2rem 5rem;
+  padding: 2rem 7rem;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -532,7 +543,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 3rem;
 
     .text-content {
       height: 100%;
@@ -555,11 +566,16 @@ nav {
         margin-bottom: 3rem;
       }
 
+      p:nth-of-type(1) {
+        font-size: 1.1rem;
+      }
+
       p {
-        font-size: 1.2rem;
+        font-size: 2.4ch;
         line-height: 1.6;
-        margin-bottom: 1rem;
-        color: #ccc;
+        margin-bottom: 2rem;
+        color: #a3a3a3;
+        text-wrap: balance;
       }
 
       .btn-outline {
@@ -653,14 +669,13 @@ nav {
 .estimate-section {
   border-radius: 16px;
   overflow: hidden;
-  width: 75%;
-  height: 30vh;
-  margin: 2rem auto;
-  width: 90%;
+  width: 85%;
+  height: 20vh;
   font-family: "manrope", sans-serif;
   padding: 2rem 5rem;
-  background: var(--primary-gradient);
+  background: var(--primary-gradient);   
   position: relative;
+  margin: 5rem auto;
 
   img {
     position: absolute;
@@ -695,22 +710,24 @@ nav {
       flex: 1;
 
       h3 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: 700;
         margin-bottom: 0.5rem;
       }
 
       p {
-        font-size: 1rem;
+        font-size: 1.5rem;
         color: #e0e0e0;
       }
     }
 
     .estimate-form {
+      width: 40%;
       padding: .3em;
       background-color: var(--white-clr);
       border-radius: 9999px;
       display: flex;
+      justify-content: space-between;
       flex-wrap: nowrap;
       gap: 0.5rem;
 
@@ -741,7 +758,7 @@ nav {
     }
   }
 
-  @media (max-width: 968px) {
+  @media (max-width: 1220px) {
 
     .estimate-container {
       flex-direction: column;
@@ -753,6 +770,7 @@ nav {
       height: 100%;
 
       .estimate-text {
+        text-align: center;
         h3 {
           font-size: 2rem;
         }
@@ -760,7 +778,7 @@ nav {
 
 
       .estimate-form {
-        width: 100%;
+        width: 50%;
 
         input {
           flex: 1;
@@ -778,8 +796,9 @@ nav {
 // <<<<<<<<<----------- SERVICES - SECTION --------------->>>>>>>>>>>
 
 .services {
+  border: 1px solid red;
   font-family: "manrope", sans-serif;
-  padding: 2rem 2rem;
+  padding: 0rem 2rem;
   background-color: var(--black-clr);
   color: var(--white-clr);
   text-align: center;
