--- a/styles/homepage_styles/style.css
+++ b/styles/homepage_styles/style.css
@@ -498,6 +498,20 @@ nav .nav-icon {
   border-radius: 0.75rem;
   object-fit: cover;
 }
+@media (max-width: 1365px) {
+  .journey-section {
+    height: max-content;
+  }
+  .journey-section .journey-content .text-content h2 {
+    font-size: 2rem;
+  }
+  .journey-section .journey-content .text-content p {
+    font-size: 2ch;
+  }
+  .journey-section .journey-content .image-content {
+    grid-column: 1/3;
+  }
+}
 @media (max-width: 1280px) {
   .journey-section {
     height: max-content;
@@ -511,7 +525,7 @@ nav .nav-icon {
     grid-column: 1/2;
   }
   .journey-section .journey-content .text-content h2 {
-    font-size: 2rem !important;
+    font-size: 2rem;
   }
   .journey-section .journey-content .image-content {
     grid-column: 2/3;
