--- a/styles/homepage_styles/style.css
+++ b/styles/homepage_styles/style.css
@@ -19,7 +19,11 @@
 
 @font-face {
   font-family: "manrope";
-  src: url("../assets/Manrope/static/Manrope-Regular.ttf");
+  src: url("../../assets/Manrope/static/Manrope-Regular.ttf");
+}
+@font-face {
+  font-family: "manrope-light";
+  src: url("../../assets/Manrope/static/Manrope-Light.ttf");
 }
 body {
   background-color: var(--black-clr);
@@ -28,16 +32,17 @@ body {
 .container {
   width: 100%;
   height: 80vh;
-  background-color: hsl(var(--secondary)/0.7);
+  background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), linear-gradient(0deg, #0274C0, #0274C0);
   font-family: "manrope", sans-serif;
   overflow: hidden;
 }
 .container img {
   position: relative;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  opacity: 60%;
 }
 .container .center-text {
   width: 80%;
@@ -47,13 +52,14 @@ body {
   transform: translate(-50%, -50%);
   color: var(--white-clr);
   text-align: center;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
 }
 .container .center-text h1 {
-  font-size: 4.4rem;
+  font-size: 4rem;
   line-height: 1.2;
 }
 .container .center-text p {
@@ -179,6 +185,7 @@ body {
 nav {
   width: calc(100% - 160px);
   position: absolute;
+  z-index: 3;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
@@ -498,18 +505,23 @@ nav .nav-icon {
   border-radius: 0.75rem;
   object-fit: cover;
 }
-@media (max-width: 1365px) {
+@media (min-width: 1281px) {
   .journey-section {
     height: max-content;
+  }
+  .journey-section .journey-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  .journey-section .journey-content .text-content {
+    grid-column: 1/2;
   }
   .journey-section .journey-content .text-content h2 {
     font-size: 2rem;
   }
-  .journey-section .journey-content .text-content p {
-    font-size: 2ch;
-  }
   .journey-section .journey-content .image-content {
-    grid-column: 1/3;
+    grid-column: 2/3;
   }
 }
 @media (max-width: 1280px) {
@@ -668,6 +680,9 @@ nav .nav-icon {
   }
 }
 @media (max-width: 900px) {
+  .estimate-section {
+    margin: 2rem auto;
+  }
   .estimate-section .estimate-container {
     align-items: flex-start;
   }
@@ -790,17 +805,18 @@ nav .nav-icon {
 }
 
 .achievment_section {
-  font-family: "manrope", sans-serif;
+  font-family: "manrope-light", sans-serif;
   background-color: var(--black-clr);
   color: var(--white-clr);
   padding: 2rem 4rem 8rem 4rem;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 5px;
 }
 .achievment_section .achievment_section-card {
+  border: 1px solid #37444d;
   border-radius: 20px;
-  padding: 2rem 2rem 2rem 1.2rem;
+  padding: 1rem 1rem 1rem 1.2rem;
   background: linear-gradient(180deg, rgba(2, 116, 192, 0.2) 10%, #0274C0);
   display: flex;
   flex-direction: column;
@@ -810,10 +826,6 @@ nav .nav-icon {
   display: flex;
   align-items: center;
   gap: 1rem;
-}
-.achievment_section .achievment_section-card p {
-  width: 95%;
-  text-wrap: balance;
 }
 @media (max-width: 1200px) {
   .achievment_section {
@@ -829,7 +841,7 @@ nav .nav-icon {
   .achievment_section {
     padding: 2rem 2rem;
     grid-template-columns: repeat(1, 1fr);
-    gap: 1.5rem;
+    gap: 1rem;
   }
 }
 
@@ -854,6 +866,10 @@ footer .container2 .footer__left {
   align-items: flex-start;
   justify-content: space-between;
   gap: 1rem;
+}
+footer .container2 .footer__left p {
+  font-family: "manrope-light", sans-serif;
+  font-size: 14px;
 }
 footer .container2 .footer__left button {
   border: 1px solid white;
@@ -892,6 +908,7 @@ footer .container2 .footer__right {
   gap: 3rem;
 }
 footer .container2 .footer__right .small_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -904,12 +921,25 @@ footer .container2 .footer__right .small_container .location {
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
-footer .container2 .footer__right .small_container .call span:nth-of-type(2),
-footer .container2 .footer__right .small_container .email span:nth-of-type(2),
-footer .container2 .footer__right .small_container .location span:nth-of-type(2) {
+footer .container2 .footer__right .small_container .call .icon,
+footer .container2 .footer__right .small_container .email .icon,
+footer .container2 .footer__right .small_container .location .icon {
+  flex: 10%;
+  text-align: center;
+}
+footer .container2 .footer__right .small_container .call .info,
+footer .container2 .footer__right .small_container .email .info,
+footer .container2 .footer__right .small_container .location .info {
+  flex: 90%;
   display: flex;
   flex-direction: column;
+}
+footer .container2 .footer__right .small_container .call .info .small_heading,
+footer .container2 .footer__right .small_container .email .info .small_heading,
+footer .container2 .footer__right .small_container .location .info .small_heading {
+  font-size: 13px;
 }
 footer .text_container {
   padding: 2rem 1rem;
@@ -926,19 +956,16 @@ footer .text_container p:nth-of-type(2) a {
   color: var(--white-clr);
 }
 
-.small_heading {
-  font-size: 13px;
-}
-
 @media (max-width: 900px) {
   footer {
-    flex-direction: column;
-    align-items: center;
+    padding: 1rem;
     gap: 2rem;
   }
   footer .container2 {
+    padding: 2rem 0;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
   }
   footer .container2 .footer__left {
     text-align: center;
@@ -952,14 +979,18 @@ footer .text_container p:nth-of-type(2) a {
     border-bottom: 1px solid #050505;
     width: 100%;
   }
+  footer .container2 .footer__center .small_container,
+  footer .container2 .footer__center .small_container .head {
+    text-align: center;
+    font-size: 1.2rem;
+  }
   footer .container2 .footer__right {
     width: 100%;
     padding: 2rem 0;
-    text-align: center;
     align-items: center;
   }
-  footer .container2 .footer__right span span {
-    text-align: left;
+  footer .container2 .footer__right .small_container {
+    width: auto;
   }
   footer .text_container {
     flex-direction: column-reverse;
