--- a/styles/homepage_styles/style.scss
+++ b/styles/homepage_styles/style.scss
@@ -19,7 +19,12 @@
 
 @font-face {
   font-family: "manrope";
-  src: url("../assets/Manrope/static/Manrope-Regular.ttf");
+  src: url("../../assets/Manrope/static/Manrope-Regular.ttf");
+}
+
+@font-face {
+  font-family: "manrope-light";
+  src: url("../../assets/Manrope/static/Manrope-Light.ttf");
 }
 
 body {
@@ -31,16 +36,18 @@ body {
 .container {
   width: 100%;
   height: 80vh;
-  background-color: hsl(var(--secondary) / .7);
+  background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%), linear-gradient(0deg, #0274C0, #0274C0);
+
   font-family: "manrope", sans-serif;
   overflow: hidden;
 
   img {
     position: relative;
-    z-index: -1;
+    z-index: 1;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 60%;
   }
 
   .center-text {
@@ -51,6 +58,7 @@ body {
     transform: translate(-50%, -50%);
     color: var(--white-clr);
     text-align: center;
+    z-index: 2;
 
     display: flex;
     flex-direction: column;
@@ -58,7 +66,7 @@ body {
     gap: 1.5rem;
 
     h1 {
-      font-size: 4.4rem;
+      font-size: 4rem;
       line-height: 1.2;
     }
 
@@ -223,6 +231,7 @@ body {
 nav {
   width: calc(100% - 160px);
   position: absolute;
+  z-index: 3;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
@@ -537,7 +546,7 @@ nav {
   gap: 3rem;
   background-color: var(--black-clr);
   color: #fff;
-  
+
   .journey-content {
     height: 100%;
     display: flex;
@@ -607,29 +616,31 @@ nav {
       }
     }
   }
-  
+
   // Responsive styles
 
-  @media(max-width: 1365px) {
+  @media(min-width: 1281px) {
     height: max-content;
 
     .journey-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+
       .text-content {
+        grid-column: 1/2;
+
         h2 {
           font-size: 2rem;
-        }
-
-        p {
-          font-size: 2ch;
         }
       }
 
       .image-content {
-        grid-column: 1/3;
+        grid-column: 2/3;
       }
     }
   }
-  
+
   @media(max-width: 1280px) {
     height: max-content;
 
@@ -654,7 +665,7 @@ nav {
 
   @media (max-width: 900px) {
     padding: 2rem 1rem;
-    
+
     .journey-content {
 
       .text-content,
@@ -818,6 +829,8 @@ nav {
 
   @media(max-width: 900px) {
 
+    margin: 2rem auto;
+
     .estimate-container {
       align-items: flex-start;
 
@@ -943,6 +956,7 @@ nav {
 
   @media(max-width: 450px) {
     padding: 0;
+
     .heading {
       p {
         margin-block: 1rem;
@@ -968,7 +982,7 @@ nav {
 // <<<<<<<<<------------- ACHIEVMENT - SECTION ------------->>>>>>>>>>>>
 
 .achievment_section {
-  font-family: 'manrope', sans-serif;
+  font-family: 'manrope-light', sans-serif;
   background-color: var(--black-clr);
   color: var(--white-clr);
 
@@ -976,11 +990,12 @@ nav {
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 5px;
 
   .achievment_section-card {
+    border: 1px solid #37444d;
     border-radius: 20px;
-    padding: 2rem 2rem 2rem 1.2rem;
+    padding: 1rem 1rem 1rem 1.2rem;
     background: linear-gradient(180deg, #0274C033 10%, #0274C0);
 
     display: flex;
@@ -991,11 +1006,6 @@ nav {
       display: flex;
       align-items: center;
       gap: 1rem;
-    }
-
-    p {
-      width: 95%;
-      text-wrap: balance;
     }
   }
 
@@ -1010,7 +1020,7 @@ nav {
   @media(max-width: 800px) {
     padding: 2rem 2rem;
     grid-template-columns: repeat(1, 1fr);
-    gap: 1.5rem;
+    gap: 1rem;
   }
 }
 
@@ -1024,7 +1034,6 @@ footer {
 
   display: flex;
   flex-direction: column;
-  // align-items: flex-start;
 
   .container2 {
     border-bottom: 1px solid #050505;
@@ -1041,6 +1050,11 @@ footer {
       align-items: flex-start;
       justify-content: space-between;
       gap: 1rem;
+
+      p {
+        font-family: 'manrope-light', sans-serif;
+        font-size: 14px;
+      }
 
       button {
         border: 1px solid white;
@@ -1091,6 +1105,7 @@ footer {
       gap: 3rem;
 
       .small_container {
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -1103,10 +1118,22 @@ footer {
           display: flex;
           align-items: center;
           gap: 1rem;
+          width: 100%;
 
-          span:nth-of-type(2) {
+          .icon {
+            flex: 10%;
+            text-align: center;
+          }
+
+          .info {
+            flex: 90%;
             display: flex;
             flex-direction: column;
+
+            .small_heading {
+              font-size: 13px;
+            }
+
           }
         }
       }
@@ -1132,19 +1159,16 @@ footer {
   }
 }
 
-.small_heading {
-  font-size: 13px;
-}
-
 @media(max-width: 900px) {
   footer {
-    flex-direction: column;
-    align-items: center;
+    padding: 1rem;
     gap: 2rem;
 
     .container2 {
+      padding: 2rem 0;
       flex-direction: column;
       justify-content: center;
+      width: 100%;
 
 
       .footer__left {
@@ -1159,18 +1183,21 @@ footer {
         padding: 2rem 0;
         border-bottom: 1px solid #050505;
         width: 100%;
+
+        .small_container,
+        .small_container .head {
+          text-align: center;
+          font-size: 1.2rem;
+        }
       }
 
       .footer__right {
         width: 100%;
         padding: 2rem 0;
-        text-align: center;
         align-items: center;
 
-        span {
-          span {
-            text-align: left;
-          }
+        .small_container {
+          width: auto;
         }
       }
     }
